(Andrea Bollini)
- SF Patch #1597807 for SF bug #1597805 DIDL Crosswalk: wrong resource management

(Claudia Juergen)
- SF patch #1589930 for SF bug #1588625 Incorrect text on item mapper screen

(Scott Yeadon)
- SF bug #1596952 Collection Wizard create Template missing schema
- Fix bug in TableRow toString() method where NPE is thrown if tablename not set
- Update DIDL license and change coding style to DSpace standard

(Stuart Lewis)
- SF Patch #1596113 [dspace]/bin/update-handle-prefix needs to index-all

(Mark Diggory)
- Change "View Licence" to "View License" in Messages.properties

(Robert Tansley)
- Error pages now return appropriate HTTP status codes (e.g. 404 not found)
- Bad filenames in /bitstream/ URLs now result in 404 error -- prevents
  infinite URL spaces confusing crawlers and bad "persistent" bitstream IDs
  circulating
- SF patch #1595902 Prevent infinite URL spaces in HTMLServlet

1.4.1 beta 1
============
(Scott Yeadon)
- Jar file updates (includes required code changes for DSIndexer and DSQuery and new jars
  fontbox.jar and serializer.jar)
- SF bug #1556829 Docs mention old SiteAuthenticator class
- SF bug #1532389 Item Templates do not work for non-dc fields

(Vlastimil Krejcir)
- SF patch #1588008 Bitstream authorization timeout patch

(Claudia Juergen)
- SF patch 1578936 for SF bug #1066771 Metadata edit form dropping DC qualifier
- removed reference to "Local DSpace Administrator Contact Information" in
  docs/index.html
  docs/configure.html
- added a note about contact info in "The Wording of E-Mails" in
  docs/configure.html
- config/registries/dublin-core-types.xml replaced deprecated reference to org.dspace.administer.DCType.java 
  with the reference to the appropriate org.dspace.content.Metadata... classes
- docs/configure.html
  updated "The Dublin Core and Bitstream Format Registries" for multiple metadata schemas
- docs/appenx.html
  added overviews of the default Dublin Core Metadata and Bitstream Registry